@@ -15,3 +15,4 @@ db_input high mythbuntu/tvstandard || true
 #Backend drivers
 db_input high mythbuntu/hdhomerun || true
 db_input high mythbuntu/xmltv || true
+db_input high mythbuntu/dvbutils || true
