@@ -26,8 +26,10 @@ ubiquity (1.7.2) UNRELEASED; urgency=low
     they don't already exist. (LP: #173378)
   * Don't allow the user to progress on non mythbuntu master backend roles
     unless they test their connection. (LP: #164979)
+  * Allow dvb-utils to be selected during installation (LP: #130924)
+  * Allow hdhomerun configuration to be installed. (LP: #153065)
 
- -- Evan Dandrea <evand@ubuntu.com>  Mon, 03 Dec 2007 18:22:51 -0500
+ -- Mario Limonciello <superm1@ubuntu.com>  Mon, 17 Dec 2007 15:21:41 -0600
 
 ubiquity (1.7.1) hardy; urgency=low
 
